crates/reinhardt-pages/tests/ui/layout/fail/missing_loader_input.stderr
error: #[layout] route binds a loader but has no Loader<T> input
 --> tests/ui/layout/fail/missing_loader_input.rs:8:1
  |
8 | #[layout("/projects/", name = "shell", loader = shell_loader)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `layout` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `Outlet`, `Page`, and `page`
 --> tests/ui/layout/fail/missing_loader_input.rs:1:23
  |
1 | use reinhardt_pages::{Outlet, Page, layout, loader, page};
  |                       ^^^^^^  ^^^^                  ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
